@@ -1,5 +1,14 @@
 2005-03-11  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/deinterlace.c
+	* plug-ins/common/despeckle.c
+	* plug-ins/common/laplace.c
+	* plug-ins/common/neon.c
+	* plug-ins/common/sobel.c
+	* plug-ins/common/dog.c: update progress less frequently.
+
+2005-03-11  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/despeckle.c: minor cleanup, inline
 	pixel_intensity() and pixel_copy().
 
